[package]
name = "std-app"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
thiserror = "2.0.3"
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
